[GTK] DRT doesn't support scheduleAsynchronousKeyDown. https://bugs.webkit.org/show_bug.cgi?id=78481

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2012-02-23
Reviewed by Gustavo Noronha Silva.

Source/WebKit/gtk:

Added a new API to deliver all mutations explicitly.

* WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
(DumpRenderTreeSupportGtk::deliverAllMutationsIfNecessary):
* WebCoreSupport/DumpRenderTreeSupportGtk.h:
(DumpRenderTreeSupportGtk):

Tools:

Extracted shareable code from keyDownCallback and then added createKeyPressEvent
to create gdk press key event.
Added sendKeyDown and sendAsynchronousKeyDown to evaluate keyDown event directly
and asynchronously. Eventually, sendAsynchronousKeyDown calls sendKeyDown.

* DumpRenderTree/gtk/EventSender.cpp:
(scheduleAsynchronousClickCallback):
(createKeyPressEvent):
(sendKeyDown):
(keyDownCallback):
(sendAsynchronousKeyDown):
(scheduleAsynchronousKeyDownCallback):

LayoutTests:

Removed following skipped tests.
fast/mutation/end-of-task-delivery.html
fast/mutation/inline-event-listener.html

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/96411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108628 268f45cc-cd09-0410-ab3c-d52691b4dbfc